change last connection

--- a/src/views/adminUsers.handlebars
+++ b/src/views/adminUsers.handlebars
@@ -20,6 +20,7 @@
           <p>First name: {{first_name}} </p>
           <p>Last name: {{last_name}} </p>
           <p>Role: {{role}} </p>
+          <p>Last connection: {{last_connection}} </p>
         </div>
       </div>
       <br>
