add mail confirm purchase

--- a/src/views/productDetail.handlebars
+++ b/src/views/productDetail.handlebars
@@ -3,9 +3,9 @@
   <div class="product__detail__container">
     <div class="product__detail__info">
       <h3>{{this.product.title}}</h3> 
+      <h3>{{this.product.code}}</h3>
       <p>{{this.product.description}}</p>
       <h3>${{this.product.price}}</h3>
-      <h3>Stock: {{this.product.stock}}</h3>
       <h3>Size: {{this.product.size}} ml</h3>
       <div>
       <button
