--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,7 +1,7 @@
 <main class="layout">
   <div class="login__container">
     <h2 class="login__title">Frangances Shop</h2>
-    <p>Ingresa tus datos o <a href="/register">REGISTRATE (Sign up)</a></p>
+    <p>Enter your data or <a href="/register"> Sign up here </a></p>
     <form action="/login" method="post" class="login__form">
       <input
         type="text"
