--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -7,19 +7,19 @@
 
           <input
             type="text"
-            placeholder="Nombre"
+            placeholder="Name"
             class="register__input"
             name="first_name"
           />
           <input
             type="text"
-            placeholder="Apellido"
+            placeholder="Last Name"
             class="register__input"
             name="last_name"
           />
           <input
             type="number"
-            placeholder="Edad"
+            placeholder="Age"
             class="register__input"
             name="age"
           />
