--- a/src/views/admin.handlebars
+++ b/src/views/admin.handlebars
@@ -3,11 +3,11 @@
     <h3 class="admin__title">Usuarios registrados</h3>
     {{#each users}}
       <ul class="admin__ul">
-        <li>Nombre: {{this.first_name}}</li>
-        <li>Apellido: {{this.last_name}}</li>
-        <li>Edad: {{this.age}}</li>
-        <li>Mail: {{this.email}}</li>
-        <li>Tipo: {{this.role}}</li>
+        <li>Name: {{this.first_name}}</li>
+        <li>Last Name: {{this.last_name}}</li>
+        <li>Age: {{this.age}}</li>
+        <li>Email: {{this.email}}</li>
+        <li>Type: {{this.role}}</li>
       </ul>
     {{/each}}
   </div>
