modify github login

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -18,7 +18,7 @@
       <div class="input__divider"></div>
       <button type="submit" class="login__btn">Sing in</button>
 
-      <a href="/auth/github"><button type="button" class="loginGitHub__btn">Sign up with GitHub</button></a>
+      <a href="/github"><button type="button" class="loginGitHub__btn">Sign up with GitHub</button></a>
     </form>
   </div>
 </main>
